--- a/coin-billigi-connected.html
+++ b/coin-billigi-connected.html
@@ -209,7 +209,7 @@
 
         const morphoAbi = [
             { inputs: [{ components: [{ name: 'loanToken', type: 'address' }, { name: 'collateralToken', type: 'address' }, { name: 'oracle', type: 'address' }, { name: 'irm', type: 'address' }, { name: 'lltv', type: 'uint256' }], name: 'marketParams', type: 'tuple' }, { name: 'assets', type: 'uint256' }, { name: 'shares', type: 'uint256' }, { name: 'onBehalf', type: 'address' }, { name: 'data', type: 'bytes' }], name: 'supply', outputs: [{ type: 'uint256' }, { type: 'uint256' }], stateMutability: 'nonpayable', type: 'function' },
-            { inputs: [{ components: [{ name: 'loanToken', type: 'address' }, { name: 'collateralToken', type: 'address' }, { name: 'oracle', type: 'address' }, { name: 'irm', type: 'address' }, { name: 'lltv', type: 'uint256' }], name: 'marketParams', type: 'tuple' }], name: 'market', outputs: [{ type: 'uint128' }, { type: 'uint128' }, { type: 'uint128' }, { type: 'uint128' }, { type: 'uint128' }, { type: 'uint128' }], stateMutability: 'view', type: 'function' },
+            { inputs: [{ name: 'id', type: 'bytes32' }], name: 'market', outputs: [{ name: 'totalSupplyAssets', type: 'uint128' }, { name: 'totalSupplyShares', type: 'uint128' }, { name: 'totalBorrowAssets', type: 'uint128' }, { name: 'totalBorrowShares', type: 'uint128' }, { name: 'lastUpdate', type: 'uint128' }, { name: 'fee', type: 'uint128' }], stateMutability: 'view', type: 'function' },
         ];
 
         const oracleAbi = [
@@ -267,16 +267,16 @@
 
             refresh: async () => {
                 try {
-                    // Get market data
+                    // Get market data (use market ID, not params)
                     const marketData = await state.publicClient.readContract({
                         address: ADDRESSES.MORPHO,
                         abi: morphoAbi,
                         functionName: 'market',
-                        args: [marketParams]
+                        args: [MARKET_ID]
                     });
 
-                    state.market.totalSupply = marketData[0];
-                    state.market.totalBorrow = marketData[2];
+                    state.market.totalSupply = marketData[0]; // totalSupplyAssets
+                    state.market.totalBorrow = marketData[2]; // totalBorrowAssets
 
                     // Get oracle data
                     const ethPrice = await state.publicClient.readContract({
